front-end setup

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+    color: #424B52;
+    background-color: #B4CCDE
+    ;
+
 }
 
 #container {
@@ -57,4 +61,15 @@ button {
     height: 1rem;
     width: 1rem;
     background-color: black;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 1.5rem;
+    
+}
+
+a:hover {
+    text-decoration: underline;
 }
