--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,12 @@ button {
 #circle {
     height: 1rem;
     width: 1rem;
-    background-color: red;
+    background-color: black;
     border-radius: 100%;
+}
+
+.redCircle {
+    color: red !important;
 }
 
 #square {
